# geef-atelier

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  Directory.Build.props  Directory.Packages.props  Geef.Atelier.slnx  LICENSE  README.md  README_de.md  docker-compose.dev.yml  docker-compose.yml  geef_advisor_devils_advocate.md  geef_advisor_premortem.md  geef_architecture.md  geef_eval_log.md  geef_plan.md  geef_review_architecture.md  geef_review_functional.md  geef_review_quality.md  geef_review_tests.md  geef_review_ui_live.md  nuget.config
cli-proxy/: .gitignore  Dockerfile  README.md  README_de.md  pyproject.toml
cli-proxy/src/: claude_adapter.py  codex_adapter.py  errors.py  main.py  openai_format.py  provider_sync.py  streaming.py  structured.py  tool_use_parser.py  usage.py  workspace.py
cli-proxy/src/adapters/: __init__.py  base.py  claude_adapter.py  codex_adapter.py  gemini_adapter.py  generic_adapter.py  utils.py
cli-proxy/tests/: test_agentic_file_mode.py  test_agentic_tool_use.py  test_auth.py  test_claude_adapter_mock.py  test_codex_adapter_mock.py  test_concurrency.py  test_document_mode.py  test_document_mode_e2e.py  test_error_envelope.py  test_explicit_endpoints.py  test_gemini_adapter.py  test_generic_adapter.py  test_json_retry.py  test_models_endpoints.py  test_openai_format.py  test_provider_sync.py  test_request_schema.py  test_response_format.py  test_streaming.py  test_tool_use_parser.py  test_usage.py
docs/: 01-vision-and-scope.md  01-vision-and-scope_de.md  02-architecture.md  02-architecture_de.md  README.md  (+19 more)
(+1161 files in other folders)
